--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
     <head>
         <title>Sopa de letras</title>
+        <meta charset="UTF-8">
         <style>
             table{
                 border-collapse: collapse;
@@ -11,6 +12,13 @@
                 width: 25px;
                 height: 25px;
                 border: 1px solid black;
+            }
+            .palabra{
+                color: green;
+            }
+            
+            .vacio{
+                display: none;
             }
         </style>
     </head>
@@ -257,52 +265,52 @@
                 switch (direccion){
                     case "ar":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila--;                       
                         }
                         break;
                     case "dsi":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila--;
                             columna++;                        
                         }
                         break;
                     case "izd":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             columna++;                      
                         }
                         break;
                     case "dii":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila++;
                             columna++;
                         }
                         break;
                     case "ab":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila++;                       
                         }
                         break;
                     case "did":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila++; 
                             columna--;
                         }
                         break;
                     case "drc":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             columna--;                       
                         }
                         break;
                     case "dsd":
                         for(let c = 0; c < palabra.length; c++){
-                            mTablero[fila][columna]=palabra[c];
+                            mTablero[fila][columna]= "<span class='palabra'>"+palabra[c]+"</span>";
                             fila--;
                             columna--;
                         }
@@ -325,7 +333,7 @@
                 for (let i = 0; i < mTablero.length; i++){
                     for (let j = 0; j < mTablero.length; j++){
                         if(mTablero[i][j] === null){
-                            mTablero[i][j] = abecedario[Math.floor(Math.random(0, 1)*abecedario.length)];
+                            mTablero[i][j] = "<span class='vacio'>"+abecedario[Math.floor(Math.random(0, 1)*abecedario.length)]+"</span>";
                         }
                     }
                 }
