cambio: mostrar el vector con las palabras clave correctamente

--- a/index.html
+++ b/index.html
@@ -346,9 +346,7 @@
             
             function mostrarPalabras(vPalabrasClave){
                 console.log(vPalabrasClave);
-                for(elements of vPalabrasClave){
-                    document.write(`${elements}, `);
-                }
+                document.write(vPalabrasClave);
             }
             
             function mostrarEnTabla(tablero){
