--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 color: purple;
             }
             .vacio{
-                display: none;
+                display: black;
             }
         </style>
     </head>
@@ -355,16 +355,22 @@
              * @returns matriz del tablero completado.
              */
             function rellenarTablero(mTablero){
-                let abecedario = ["a", "b", "c", "d", "e", "f", "g", "h",
-                                  "i", "j", "k", "l", "m", "n", "ñ", "o",
-                                  "p", "q", "r", "s", "t", "u", "v", "w",
+                let numero;
+                let consonantes = ["b", "c", "d", "f", "g", "h",
+                                  "j", "k", "l", "m", "n", "ñ", 
+                                  "p", "q", "r", "s", "t", "v", "w",
                                   "x", "y", "z"
                                  ];
-
+                let vocales = ["a", "e", "i", "o", "u"];
                 for (let i = 0; i < mTablero.length; i++){
                     for (let j = 0; j < mTablero.length; j++){
                         if(mTablero[i][j] === null){
-                            mTablero[i][j] = "<span class='vacio'>"+abecedario[Math.floor(Math.random(0, 1)*abecedario.length)]+"</span>";
+                            numero = Math.random();
+                            if(numero < 0.7){
+                                mTablero[i][j] = "<span class='vacio'>"+consonantes[Math.floor(Math.random(0, 1)*consonantes.length)]+"</span>";
+                            } else{
+                                mTablero[i][j] = "<span class='vacio'>"+vocales[Math.floor(Math.random(0, 1)*vocales.length)]+"</span>";
+                            }
                         }
                     }
                 }
