Modificado mostrarTabla.js: cambio de nombre, funciones con document.createelement Moficado index.html y main.js: cambios leves

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 color: purple;
             }
             .vacio{
-                display: black;
+                color: black;
             }
         </style>
     </head>
@@ -70,6 +70,11 @@
             La forma de rellenar el tablero una vez situada las palabras de manera correcta, será aleatoriamente.
         -->
         <main>
+            <script type="module" src="webroot/js/mostrarTabla.js" defer></script>
+            <script type="module" src="webroot/js/palabras.js" defer></script>
+            <script type="module" src="webroot/js/rellenarTablero.js" defer></script>
+            <script type="module" src="webroot/js/situarPalabras.js" defer></script>
+            <script type="module" src="webroot/js/creacionTablero.js" defer></script>
             <script type="module" src="webroot/js/main.js" defer></script>
         </main>
     </body>
