--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 height: 30%;
             }
             
+            .seleccion{
+                background-color: yellow;
+            }
+            
             td{
                 text-align: center;
                 width: 25px;
