Diferenciación entre palabras correctas e incorrectas con cambio de background

--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
                 background-color: yellow;
             }
             
+            .correcto{
+                background-color: lightgreen;
+            }
+            
+            .incorrecto{
+                background-color: lightcoral;
+            }
             td{
                 text-align: center;
                 width: 25px;
