--- a/index.html
+++ b/index.html
@@ -93,7 +93,11 @@
         </header>
         <main>
             <div id="container"></div>
-            <div id="puntuacion"></div>
+            <div>
+                <div id="puntuacion"></div>
+                <div id="palabras"></div>
+            </div>
+            
         </main>
         <footer>
             <a href="../index.html">Álvaro Allén Perlines</a> | <time>2025-11-24</time>
