Implementar niveles de dificultad

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <main>
             <div class="container">
                 <div class="menu1">
-                    <div id="btnComenzar" class="btn">Comenzar</div>
+                    <div id="btnFacil" class="btn">Facil</div>
                     <div id="cont1" class="oculto cont1">
                         <h2>Palabras ocultas</h2>
                         <div id="palabras" class="palabras"></div>
@@ -28,12 +28,14 @@
                 </div>
                 
                 <div class="menu2">
+                    <div id="btnMedio" class="btn">Medio</div>
                     <div id="cont2" class="oculto cont2">
                         <div id="container" class="contsopa"></div>
                     </div>
                 </div>
                 
                 <div class="menu3">
+                    <div id="btnDificil" class="btn">Dificil</div>
                     <div id="cont3" class="oculto cont3">
                         <div id="cont3_1" class=" cont3_1">
                             <div id="contCronometro" class="crono"></div>
