--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Sopa de letras</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="module" src="webroot/js/main.js" defer></script>
+        <script type="module" src="webroot/js/main.js"></script>
         <link rel="stylesheet" href="webroot/estilos/estilos.css"/>
         <link rel="stylesheet" href="webroot/estilos/estilosMenu.css"/>
     </head>
